# GW_RP2350-Touch-LCD-2.8

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/bsp/: bsp_battery.c  bsp_battery.h  bsp_i2s.c  bsp_i2s.h  bsp_pcf85063.c  bsp_pcf85063.h  bsp_st7789.c  bsp_st7789.h
lib/joysticks/: Joystics.c  Joystics.h  util_i2c_joy.h
lib/sdcard/: sdcard.h
lib/sound/: i2s.c  i2s.h
src/: config.h  fast_menu.h  hud_func.c  hud_func.h  icons.h  main.c  sound.h  util_cfg.c  util_cfg.h  util_cfg_menu.h  util_i2c_kbd.h  util_sd.c  util_touch2joy.c  util_touch2joy.h
src/system/: gw_system.c  gw_system.h
